--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,30 @@ header {
     background-color: #c00;
 }
 
+nav ul {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    background-color: #2a2a2a;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 15px 0;
+    display: block;
+}
+
+nav ul li a:hover {
+    background-color: #555;
+}
+
 main {
     padding: 20px;
 }
@@ -68,3 +92,4 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
